--- a/caasp-kvm/cloud-init/admin.cfg
+++ b/caasp-kvm/cloud-init/admin.cfg
@@ -7,8 +7,8 @@ locale: en_GB.UTF-8
 timezone: Etc/UTC
 
 # Set hostname and FQDN
-hostname: admin
-fqdn: admin.devenv.caasp.suse.net
+hostname: caasp-admin
+fqdn: caasp-admin.devenv.caasp.suse.net
 
 # set root password
 chpasswd:
